--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rails/webpacker": "^3.2.0",
     "coffeescript": "1.12.7",
     "core-js": "^2.5.3",
+    "html-loader": "^0.5.4",
     "rxjs": "^5.5.6",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
