--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.5",
+    "apollo-client": "^2.2.0",
+    "apollo-link": "^1.0.7",
+    "apollo-link-http": "^1.3.2",
     "axios": "^0.17.1",
     "bootstrap": "4.0.0",
     "font-awesome": "^4.7.0",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
     "vue": "^2.5.2",
+    "vue-apollo": "^3.0.0-alpha.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
