--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "font-awesome": "^4.7.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue2-autocomplete-js": "^0.2.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
